<resources>
    <string name="app_name">espguard</string>
    <string name="add_sensor">ADD SENSOR</string>
    <string name="health_check">HEALTH CHECK</string>
    <string name="dark_theme">Switch to Dark Theme</string>
    <string name="delete_all_events">DELETE ALL EVENTS</string>
    <string name="notifications_on_quiet">Put notifications on quiet</string>
    <string name="ignore_notifications">Ignore notifications</string>
    <string name="time">TIME</string>
    <string name="application_settings">Application Settings</string>

    <string name="sensors">Sensors:</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="sensor_name_template">Name: %s</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="sensor_id_template">ID: %s</string>
    <string name="sensor_status">Sensor Status</string>
    <string name="sensor_status_template">Status: %s</string>

    <string name="sensor_status_failed">connection failed</string>
    <string name="sensor_status_pending">connection pending</string>
    <string name="sensor_status_healthy">healthy</string>
    <string name="sensor_status_off">switched off</string>

    <string name="event_id">ID</string>

    <string name="sensor_on">Sensor ON</string>
    <string name="configure">CONFIGURE</string>
    <string name="delete_device">DELETE DEVICE</string>
    <string name="sensor_name_name">Name</string>
    <string name="sensor_saving_button">Saving button</string>
    <string name="save">Save</string>
    <string name="sensor_new_name">New Name</string>
    <string name="delete_events">Delete Events</string>

    <string name="notification_text_template">%s detected movement at %s</string>
    <string name="notification_title">Movement Alert</string>
    <string name="settings">Settings</string>

    <!-- Toasts -->
    <string name="toast_sensor_rename_fail">New name cannot be empty</string>
    <string name="toast_rename_to">Renamed sensor to %s</string>
    <string name="toast_device_deleted">Deleted device</string>
    <string name="toast_delete_sensor_events">Deleted %s sensor events</string>
    <string name="toast_added_sensor_to_db">Added sensor %s</string>
    <string name="toast_sensor_adding_fail">Some fields are empty</string>
</resources>